[front] fix some stuff on mobile

--- a/src/nginx/html/styles/game.css
+++ b/src/nginx/html/styles/game.css
@@ -101,7 +101,7 @@
 	position: absolute;
 	top: 0;
 	width: 100%;
-	height: 100%;
+	height: calc(var(--vh) * 100);
 }
 
 #winBlur, #waitBlur, #countdownBlur{
@@ -109,7 +109,7 @@
 	top: 0;
 	left: 0;
 	width: 100vw;
-	height: 100vh;
+	height: calc(var(--vh) * 100);
 	background: black;
 	opacity: .7;
 	display: block;
